# mlops-practice-book

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  compose.yml  errata.md  pyproject.toml  request-test.sh
.github/workflows/: aws_auth.yml  cd.yml  ci.yml  sample.yml
notebook/: model_creation.ipynb  monitoring.ipynb
src/: feature_extraction.py  predictor.py  train.py  train_with_feature_store.py
src/mlops/: const.py
src/mlops/aws/: __init__.py  controller.py
src/mlops/data_loader/: __init__.py  from_athena.py
src/mlops/data_validator/: __init__.py  schema.py
src/mlops/evaluation/: __init__.py  calibration_curve.py  comparison.py  histgram.py  metrics.py  roc_auc_curve.py
src/mlops/middleware/: __init__.py  logging.py  path.py
src/mlops/model/: __init__.py  metadata.py  model_config.py  preprocess.py  schema.py
src/mlops/model/models/: base_model.py  lightgbm.py  sgd_classifier.py
src/mlops/predictor/: __init__.py  request.py
terraform/: athena.tf  cloudwatch_dashboard.tf  dynamodb.tf  ecr.tf  ecs.tf  glue.tf  iam.tf  kinesis.tf  loadbalancer.tf  network.tf  openid_connect_provider.tf  output.tf  provider.tf  s3.tf  stepfunctions.tf
terraform/container_definitions/: predict_api.json  train.json
terraform/fluentbit/: Dockerfile  extra.conf
terraform/statemachine_definitions/: train_pipeline.json
tests/: test_predictor.py
tests/aws/: test_controller.py
tests/data_loader/: test_from_athena.py
tests/data_validator/: test_schema.py
tests/evaluation/: test_comparison.py  test_metrics.py
tests/middleware/: test_logging.py  test_path.py
tests/model/: test_preprocess.py
tests/model/models/: test_lightgbm.py  test_sgd_classifier.py
tests/predictor/: test_request.py
