[project]
name = "mlops"
version = "0.1.0"
description = "mlops practice book"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "awswrangler>=3.10.1",
    "boto3>=1.35.90",
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "lightgbm>=4.5.0",
    "matplotlib>=3.10.0",
    "mysql-connector-python>=9.1.0",
    "numpy>=2.2.1",
    "optuna>=4.1.0",
    "pandas>=2.2.3",
    "pandera[io]>=0.22.1",
    "psutil>=6.1.1",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "treelite>=4.4.1",
    "uvicorn>=0.34.0",
]

[tool.uv]
dev-dependencies = [
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.4",
    "moto>=5.1.4",
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "pytest-freezer>=0.4.9",
    "ruff>=0.8.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlops", "src"]

[tool.ruff]
line-length = 127

[tool.ruff.lint]
# Rules is referenced by https://docs.astral.sh/ruff/linter/#rule-selection
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "I",   # isort
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
exclude = ["*.ipynb"]

[tool.mypy]
mypy_path = ["src"]
strict = true

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "pandas.*",
    "sklearn.*",
    "seaborn",
    "psutil.*",
    "tqdm",
    "requests",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:datetime.datetime.utcnow:DeprecationWarning:botocore",
]
addopts = "-m 'not integration and not e2e'"
markers = [
    "integration",
    "e2e",
]
